noinst_LTLIBRARIES = libvvj.la
libvvj_la_SOURCES = \
leptens.F \
m2s_qqwmag.F \
m2s_qqwmagj.F \
m2s_qqwpag.F \
m2s_qqwpagj.F \
m2s_qqwmzg.F \
m2s_qqwmzgj.F \
m2s_qqwpzg.F \
m2s_qqwpzgj.F


if WITH_NLO
libvvj_la_SOURCES += \
m2s_qqwmagvirt.F \
m2s_qqwpagvirt.F \
m2s_qqwmzgvirt.F \
m2s_qqwpzgvirt.F 
endif

libvvj_la_FFLAGS = $(AM_FFLAGS)
