noinst_LTLIBRARIES = libDiagramsFLoops.la

libDiagramsFLoops_la_FFLAGS = $(AM_FFLAGS)

## fix memory leak with gfortran 4.8
libDiagramsFLoops_la_FFLAGS +=$(GFORTRAN_48_FIX_LOOPS)

libDiagramsFLoops_la_SOURCES = \
PenEvenGSimtemp.F\
PenEvenGSimtempFa1.F\
PenEvenGSimtempFa2.F\
PenEvenGSimtempFa3.F\
PenEvenGSimtempFa4.F\
PenEvenGSimtempFa5.F\
PenEvenGSimtempFa6.F\
PenEvenGSimtempFa7.F\
PenEvenGSimtempFa8.F\
PenEvenGSimtempFa9.F\
PenEvenGSimtempFa10.F\
PenEvenGSimtempFa11.F\
PenEvenGSimtempFa12.F\
PenEvenGSimtempFa13.F\
PenEvenGSimtempFa14.F\
PenEvenGSimtempFa15.F\
PenEvenGSimtempFF1.F\
PenEvenGSimtempFF2.F\
PenEvenGSimtempFF3.F\
PenEvenGSimtempFF4.F\
PenEvenGSimtempFF5.F\
PenEvenGSimtempFF6.F\
PenEvenGSimtempFF7.F\
PenEvenGSimtempFF8.F\
PenEvenGSimtempFF9.F\
PenEvenGSimtempFF10.F\
PenEvenGSimtempFF11.F\
PenEvenGSimtempFF12.F\
PenEvenGSimtempFF13.F\
PenEvenGSimtempFF14.F\
PenEvenGSimtempFF15.F\
PenEvenGSimtempFF16.F\
PenEvenGSimtempFF17.F\
PenEvenGSimtempFF18.F\
PenEvenGSimtempFF19.F\
PenEvenGSimtempFF20.F\
PenOddGSimtemp.F\
PenOddGSimtempFa1.F\
PenOddGSimtempFa2.F\
PenOddGSimtempFa3.F\
PenOddGSimtempFa4.F\
PenOddGSimtempFa5.F\
PenOddGSimtempFa6.F\
PenOddGSimtempFa7.F\
PenOddGSimtempFa8.F\
PenOddGSimtempFa9.F\
PenOddGSimtempFa10.F\
PenOddGSimtempFa11.F\
PenOddGSimtempFa12.F\
PenOddGSimtempFa13.F\
PenOddGSimtempFa14.F\
PenOddGSimtempFa15.F\
PenOddGSimtempFa16.F\
PenOddGSimtempFa17.F\
PenOddGSimtempFa18.F\
PenOddGSimtempFa19.F\
PenOddGSimtempFa20.F\
PenOddGSimtempFa21.F\
PenOddGSimtempFa22.F\
PenOddGSimtempFa23.F\
PenOddGSimtempFa24.F\
PenOddGSimtempFa25.F\
PenOddGSimtempFa26.F\
PenOddGSimtempFa27.F\
PenOddGSimtempFa28.F\
PenOddGSimtempFa29.F\
PenOddGSimtempFa30.F\
PenOddGSimtempFa31.F\
PenOddGSimtempFa32.F\
PenOddGSimtempFF1.F\
PenOddGSimtempFF2.F\
PenOddGSimtempFF3.F\
PenOddGSimtempFF4.F\
PenOddGSimtempFF5.F\
PenOddGSimtempFF6.F\
PenOddGSimtempFF7.F\
PenOddGSimtempFF8.F\
PenOddGSimtempFF9.F\
PenOddGSimtempFF10.F\
PenOddGSimtempFF11.F\
PenOddGSimtempFF12.F\
PenOddGSimtempFF13.F\
PenOddGSimtempFF14.F\
PenOddGSimtempFF15.F\
PenOddGSimtempFF16.F\
PenOddGSimtempFF17.F\
PenOddGSimtempFF18.F\
PenOddGSimtempFF19.F\
PenOddGSimtempFF20.F\
FermionBoxEventemp1.F\
FermionVertEventemp.F\
FermionBoxEventemp1_Div.F\
FermionVertEventemp_Div.F\
FermionVertCouplingT.F\
FermionVertCouplingT_Div.F\
FermionVertEventempCoupling.F\
FermionVertEventempCoupling_Div.F\
FermionVertOddtempCoupling.F\
FermionVertOddtempCoupling_Div.F\
FermionBoxCouplingT.F\
FermionBoxCouplingT_Div.F\
FermionBoxCouplingT_GM.F\
FermionBoxCouplingT_GM_Div.F\
FermionBoxEventempCoupling.F\
FermionBoxEventempCoupling_Div.F\
FermionBoxEvenG1tempCoupling1.F\
FermionBoxEvenG1tempCoupling1_Div.F\
FermionBoxOddtempCoupling.F\
FermionBoxOddtempCoupling_Div.F\
FermionBoxOddtempCoupling_G.F\
FermionBoxOddtempCoupling_G_Div.F\
FermionPenCouplingT_GM.F\
FermionPenCouplingT_GM_Div.F\
PenEvenGtemp.F\
PenEvenGtemp_Div.F\
PenEvenGtempFa1.F\
PenEvenGtempFa2.F\
PenEvenGtempFa3.F\
PenEvenGtempFa4.F\
PenEvenGtempFa5.F\
PenEvenGtempFa6.F\
PenEvenGtempFa7.F\
PenEvenGtempFa8.F\
PenEvenGtempFa9.F\
PenEvenGtempFa10.F\
PenEvenGtempFa11.F\
PenEvenGtempFa12.F\
PenEvenGtempFa13.F\
PenEvenGtempFa14.F\
PenEvenGtempFa15.F\
PenEvenGtempFF1.F\
PenEvenGtempFF2.F\
PenEvenGtempFF3.F\
PenEvenGtempFF4.F\
PenEvenGtempFF5.F\
PenEvenGtempFF6.F\
PenEvenGtempFF7.F\
PenEvenGtempFF8.F\
PenEvenGtempFF9.F\
PenEvenGtempFF10.F\
PenEvenGtempFF11.F\
PenEvenGtempFF12.F\
PenEvenGtempFF13.F\
PenEvenGtempFF14.F\
PenEvenGtempFF15.F\
PenEvenGtempFF16.F\
PenEvenGtempFF17.F\
PenEvenGtempFF18.F\
PenEvenGtempFF19.F\
PenEvenGtempFF20.F\
PenOddGtemp.F\
PenOddGtemp_Div.F\
PenOddGtempFa1.F\
PenOddGtempFa2.F\
PenOddGtempFa3.F\
PenOddGtempFa4.F\
PenOddGtempFa5.F\
PenOddGtempFa6.F\
PenOddGtempFa7.F\
PenOddGtempFa8.F\
PenOddGtempFa9.F\
PenOddGtempFa10.F\
PenOddGtempFa11.F\
PenOddGtempFa12.F\
PenOddGtempFa13.F\
PenOddGtempFa14.F\
PenOddGtempFa15.F\
PenOddGtempFF1.F\
PenOddGtempFF2.F\
PenOddGtempFF3.F\
PenOddGtempFF4.F\
PenOddGtempFF5.F\
PenOddGtempFF6.F\
PenOddGtempFF7.F\
PenOddGtempFF8.F\
PenOddGtempFF9.F\
PenOddGtempFF10.F\
PenOddGtempFF11.F\
PenOddGtempFF12.F\
PenOddGtempFF13.F\
PenOddGtempFF14.F\
PenOddGtempFF15.F\
PenOddGtempFF16.F\
PenOddGtempFF17.F\
PenOddGtempFF18.F\
PenOddGtempFF19.F\
PenOddGtempFF20.F\
HiggsEventempver1.F\
HiggsEventempver_Div.F\
HiggsEventempbox.F

if WITH_QUAD

libDiagramsFLoops_la_FFLAGS += -DWITH_QUAD
libDiagramsFLoops_la_SOURCES += \
PenEvenGSimtemp_QUAD.F\
PenOddGSimtemp_QUAD.F\
FermionBoxEventempCoupling_QUAD.F\
FermionBoxOddtempCoupling_QUAD.F

endif

$(top_builddir)/include/%.mod: libDiagramsFloops_la-%.lo
	$(MAKE) $^

include $(top_srcdir)/Makefile.dependencylist
EXTRA_DIST = Makefile.dep
