noinst_LTLIBRARIES = libDiagramsHexL.la

libDiagramsHexL_la_FFLAGS = $(AM_FFLAGS)

## fix memory leak with gfortran 4.8
libDiagramsHexL_la_FFLAGS +=$(GFORTRAN_48_FIX_LOOPS)

libDiagramsHexL_la_SOURCES = \
HexLineNoAbewithGaugeDiv.F    \
HexLineNoAbewithGauge.F       \
HexLineNoAbewithGaugeTotal.F  \
HexLinewithGaugeDiv.F         \
HexLinewithGauge.F            \
HexLinewithGaugeTotal.F       \
test_HexLineABEtempDiv.F      \
test_HexLineABEtemp.F         \
test_HexLineABEtempFa10.F     \
test_HexLineABEtempFa11.F     \
test_HexLineABEtempFa12.F     \
test_HexLineABEtempFa13.F     \
test_HexLineABEtempFa14.F     \
test_HexLineABEtempFa15.F     \
test_HexLineABEtempFa16.F     \
test_HexLineABEtempFa17.F     \
test_HexLineABEtempFa18.F     \
test_HexLineABEtempFa19.F     \
test_HexLineABEtempFa1.F      \
test_HexLineABEtempFa20.F     \
test_HexLineABEtempFa21.F     \
test_HexLineABEtempFa22.F     \
test_HexLineABEtempFa23.F     \
test_HexLineABEtempFa24.F     \
test_HexLineABEtempFa25.F     \
test_HexLineABEtempFa26.F     \
test_HexLineABEtempFa27.F     \
test_HexLineABEtempFa28.F     \
test_HexLineABEtempFa29.F     \
test_HexLineABEtempFa2.F      \
test_HexLineABEtempFa30.F     \
test_HexLineABEtempFa31.F     \
test_HexLineABEtempFa32.F     \
test_HexLineABEtempFa33.F     \
test_HexLineABEtempFa34.F     \
test_HexLineABEtempFa35.F     \
test_HexLineABEtempFa36.F     \
test_HexLineABEtempFa37.F     \
test_HexLineABEtempFa38.F     \
test_HexLineABEtempFa39.F     \
test_HexLineABEtempFa3.F      \
test_HexLineABEtempFa40.F     \
test_HexLineABEtempFa4.F      \
test_HexLineABEtempFa5.F      \
test_HexLineABEtempFa6.F      \
test_HexLineABEtempFa7.F      \
test_HexLineABEtempFa8.F      \
test_HexLineABEtempFa9.F      \
test_HexLineABEtempFF10.F     \
test_HexLineABEtempFF11.F     \
test_HexLineABEtempFF12.F     \
test_HexLineABEtempFF13.F     \
test_HexLineABEtempFF14.F     \
test_HexLineABEtempFF15.F     \
test_HexLineABEtempFF16.F     \
test_HexLineABEtempFF17.F     \
test_HexLineABEtempFF18.F     \
test_HexLineABEtempFF19.F     \
test_HexLineABEtempFF1.F      \
test_HexLineABEtempFF20.F     \
test_HexLineABEtempFF21.F     \
test_HexLineABEtempFF22.F     \
test_HexLineABEtempFF23.F     \
test_HexLineABEtempFF24.F     \
test_HexLineABEtempFF25.F     \
test_HexLineABEtempFF26.F     \
test_HexLineABEtempFF27.F     \
test_HexLineABEtempFF28.F     \
test_HexLineABEtempFF29.F     \
test_HexLineABEtempFF2.F      \
test_HexLineABEtempFF30.F     \
test_HexLineABEtempFF3.F      \
test_HexLineABEtempFF4.F      \
test_HexLineABEtempFF5.F      \
test_HexLineABEtempFF6.F      \
test_HexLineABEtempFF7.F      \
test_HexLineABEtempFF8.F      \
test_HexLineABEtempFF9.F      \
test_HexLineNoAbe1gtempDiv.F  \
test_HexLineNoAbe1gtemp.F     \
test_HexLineNoABE1gtempFa10.F \
test_HexLineNoABE1gtempFa11.F \
test_HexLineNoABE1gtempFa12.F \
test_HexLineNoABE1gtempFa13.F \
test_HexLineNoABE1gtempFa14.F \
test_HexLineNoABE1gtempFa15.F \
test_HexLineNoABE1gtempFa16.F \
test_HexLineNoABE1gtempFa17.F \
test_HexLineNoABE1gtempFa18.F \
test_HexLineNoABE1gtempFa19.F \
test_HexLineNoABE1gtempFa1.F  \
test_HexLineNoABE1gtempFa20.F \
test_HexLineNoABE1gtempFa21.F \
test_HexLineNoABE1gtempFa22.F \
test_HexLineNoABE1gtempFa23.F \
test_HexLineNoABE1gtempFa24.F \
test_HexLineNoABE1gtempFa25.F \
test_HexLineNoABE1gtempFa26.F \
test_HexLineNoABE1gtempFa27.F \
test_HexLineNoABE1gtempFa28.F \
test_HexLineNoABE1gtempFa29.F \
test_HexLineNoABE1gtempFa2.F  \
test_HexLineNoABE1gtempFa30.F \
test_HexLineNoABE1gtempFa31.F \
test_HexLineNoABE1gtempFa32.F \
test_HexLineNoABE1gtempFa33.F \
test_HexLineNoABE1gtempFa34.F \
test_HexLineNoABE1gtempFa35.F \
test_HexLineNoABE1gtempFa36.F \
test_HexLineNoABE1gtempFa37.F \
test_HexLineNoABE1gtempFa38.F \
test_HexLineNoABE1gtempFa39.F \
test_HexLineNoABE1gtempFa3.F  \
test_HexLineNoABE1gtempFa40.F \
test_HexLineNoABE1gtempFa4.F  \
test_HexLineNoABE1gtempFa5.F  \
test_HexLineNoABE1gtempFa6.F  \
test_HexLineNoABE1gtempFa7.F  \
test_HexLineNoABE1gtempFa8.F  \
test_HexLineNoABE1gtempFa9.F  \
test_HexLineNoABE1gtempFF10.F \
test_HexLineNoABE1gtempFF11.F \
test_HexLineNoABE1gtempFF12.F \
test_HexLineNoABE1gtempFF13.F \
test_HexLineNoABE1gtempFF14.F \
test_HexLineNoABE1gtempFF15.F \
test_HexLineNoABE1gtempFF16.F \
test_HexLineNoABE1gtempFF17.F \
test_HexLineNoABE1gtempFF18.F \
test_HexLineNoABE1gtempFF19.F \
test_HexLineNoABE1gtempFF1.F  \
test_HexLineNoABE1gtempFF20.F \
test_HexLineNoABE1gtempFF21.F \
test_HexLineNoABE1gtempFF22.F \
test_HexLineNoABE1gtempFF23.F \
test_HexLineNoABE1gtempFF24.F \
test_HexLineNoABE1gtempFF25.F \
test_HexLineNoABE1gtempFF26.F \
test_HexLineNoABE1gtempFF27.F \
test_HexLineNoABE1gtempFF28.F \
test_HexLineNoABE1gtempFF29.F \
test_HexLineNoABE1gtempFF2.F  \
test_HexLineNoABE1gtempFF30.F \
test_HexLineNoABE1gtempFF3.F  \
test_HexLineNoABE1gtempFF4.F  \
test_HexLineNoABE1gtempFF5.F  \
test_HexLineNoABE1gtempFF6.F  \
test_HexLineNoABE1gtempFF7.F  \
test_HexLineNoABE1gtempFF8.F  \
test_HexLineNoABE1gtempFF9.F 

if WITH_QCDVV
libDiagramsHexL_la_SOURCES += \
NoAbe2gaHexLinetempFa1.F\
NoAbe2gaHexLinetempFa2.F\
NoAbe2gaHexLinetempFa3.F\
NoAbe2gaHexLinetempFa4.F\
NoAbe2gaHexLinetempFa5.F\
NoAbe2gaHexLinetempFa6.F\
NoAbe2gaHexLinetempFa7.F\
NoAbe2gaHexLinetempFa8.F\
NoAbe2gaHexLinetempFa9.F\
NoAbe2gaHexLinetempFa10.F\
NoAbe2gaHexLinetempFa11.F\
NoAbe2gaHexLinetempFa12.F\
NoAbe2gaHexLinetempFa13.F\
NoAbe2gaHexLinetempFa14.F\
NoAbe2gaHexLinetempFa15.F\
NoAbe2gaHexLinetempFa16.F\
NoAbe2gaHexLinetempFa17.F\
NoAbe2gaHexLinetempFa18.F\
NoAbe2gaHexLinetempFa19.F\
NoAbe2gaHexLinetempFa20.F\
NoAbe2gaHexLinetempFa21.F\
NoAbe2gaHexLinetempFa22.F\
NoAbe2gaHexLinetempFa23.F\
NoAbe2gaHexLinetempFa24.F\
NoAbe2gaHexLinetempFa25.F\
NoAbe2gaHexLinetempFa26.F\
NoAbe2gaHexLinetempFa27.F\
NoAbe2gaHexLinetempFa28.F\
NoAbe2gaHexLinetempFa29.F\
NoAbe2gaHexLinetempFa30.F\
NoAbe2gaHexLinetempFa31.F\
NoAbe2gaHexLinetempFa32.F\
NoAbe2gaHexLinetempFa33.F\
NoAbe2gaHexLinetempFa34.F\
NoAbe2gaHexLinetempFa35.F\
NoAbe2gaHexLinetempFF1.F\
NoAbe2gaHexLinetempFF2.F\
NoAbe2gaHexLinetempFF3.F\
NoAbe2gaHexLinetempFF4.F\
NoAbe2gaHexLinetempFF5.F\
NoAbe2gaHexLinetempFF6.F\
NoAbe2gaHexLinetempFF7.F\
NoAbe2gaHexLinetempFF8.F\
NoAbe2gaHexLinetempFF9.F\
NoAbe2gaHexLinetempFF10.F\
NoAbe2gaHexLinetempFF11.F\
NoAbe2gaHexLinetempFF12.F\
NoAbe2gaHexLinetempFF13.F\
NoAbe2gaHexLinetempFF14.F\
NoAbe2gaHexLinetempFF15.F\
NoAbe2gaHexLinetempFF16.F\
NoAbe2gaHexLinetempFF17.F\
NoAbe2gaHexLinetempFF18.F\
NoAbe2gaHexLinetempFF19.F\
NoAbe2gaHexLinetempFF20.F\
NoAbe2gaHexLinetempFF21.F\
NoAbe2gaHexLinetempFF22.F\
NoAbe2gaHexLinetempFF23.F\
NoAbe2gaHexLinetempFF24.F\
NoAbe2gaHexLinetempFF25.F\
NoAbe2gaHexLinetempFF26.F\
NoAbe2gaHexLinetempFF27.F\
NoAbe2gaHexLinetempFF28.F\
NoAbe2gaHexLinetempFF29.F\
NoAbe2gaHexLinetempFF30.F\
NoAbe2gaHexLinetempFF31.F\
NoAbe2gaHexLinetempFF32.F\
NoAbe2gaHexLinetempFF33.F\
NoAbe2gaHexLinetempFF34.F\
NoAbe2gaHexLinetempFF35.F\
NoAbe2gaHexLinetempFF36.F\
NoAbe2gaHexLinetempFF37.F\
NoAbe2gaHexLinetempFF38.F\
NoAbe2gaHexLinetempFF39.F\
NoAbe2gaHexLinetempFF40.F\
NoAbe2gaHexLinetempFF41.F\
NoAbe2gaHexLinetempFF42.F\
NoAbe2gaHexLinetempFF43.F\
NoAbe2gaHexLinetempFF44.F\
NoAbe2gaHexLinetempFF45.F\
NoAbe2gaHexLinetempFF46.F\
NoAbe2gaHexLinetempFF47.F\
NoAbe2gaHexLinetempFF48.F\
NoAbe2gaHexLinetempFF49.F\
NoAbe2gaHexLinetempFF50.F\
NoAbe2gaHexLinetemp.F\
NoAbe2gaHexLinetempDiv.F\
HexLineNoAbewithGaugeTotal_2g.F\
NoAbe4vertHexLinetempFF6.F\
NoAbe4vertHexLinetempFF7.F\
NoAbe4vertHexLinetempDiv.F\
NoAbe4vertHexLinetempFF8.F\
NoAbe4vertHexLinetempFF9.F\
NoAbe4vertHexLinetempFa1.F\
NoAbe4vertHexLinetempFa2.F\
NoAbe4vertHexLinetempFa3.F\
NoAbe4vertHexLinetemp.F\
NoAbe4vertHexLinetempFa4.F\
NoAbe4vertHexLinetempFa5.F\
NoAbe4vertHexLinetempFF10.F\
NoAbe4vertHexLinetempFa6.F\
NoAbe4vertHexLinetempFa7.F\
NoAbe4vertHexLinetempFF1.F\
NoAbe4vertHexLinetempFa8.F\
NoAbe4vertHexLinetempFF2.F\
NoAbe4vertHexLinetempFa9.F\
NoAbe4vertHexLinetempFF3.F\
NoAbe4vertHexLinetempFF4.F\
NoAbe4vertHexLinetempFF5.F\
NoAbe4vertHexLinetempFa10.F\
HexLineNoAbewithGaugeTotal_4Vert.F

endif


if WITH_QUAD

libDiagramsHexL_la_FFLAGS += -DWITH_QUAD
libDiagramsHexL_la_SOURCES += \
XFGetM0_QUAD_Dble.F \
XFGetM0_QUAD_Dble2g.F \
XFGetM0_QUAD_Dble_4g.F \
test_HexLineABEtemp_QUAD.F \
NoAbe2gaHexLinetemp_QUAD.F\
NoAbe4vertHexLinetemp_QUAD.F\
test_HexLineNoAbe1gtemp_QUAD.F
endif

$(top_builddir)/include/%.mod: libDiagramsHexL_la-%.lo
	$(MAKE) $^

include $(top_srcdir)/Makefile.dependencylist
EXTRA_DIST = Makefile.dep
